# opencode_4py

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMFYUI_INDEX.md  CONTRIBUTING.md  LICENSE  MISSION.md  Makefile  OPENCODE_4PY_README.md  PROJECT_INDEX.md  README.md  SECURITY.md  TODO.md  check_prerequisites.py  opencode.toml  run_opencode_4py.bat  update_opencode_4py.py
src/opencode/: .gitignore  README.md  __main__.py  pyproject.toml
src/opencode/RAG/agent_python_essentials/: config.json
src/opencode/cli/: main.py
src/opencode/cli/commands/: __init__.py  config.py  debug_cmd.py  github.py  llmchecker.py  local_llm.py  memory.py  model_picker.py  multiagent.py  rag_audit.py  rag_create.py  rag_manage.py  rag_share.py  rag_validation.py  serve.py
src/opencode/core/: defaults.py  gpu_manager.py  sandbox.py
src/opencode/core/context/: __init__.py  tracker.py
src/opencode/core/distributed/: multi_gpu.py  runner.py  sharding.py
src/opencode/core/finetuning/: __init__.py  dataset.py
src/opencode/core/llm/: model_manager.py
src/opencode/core/memory/: __init__.py  config.py  graph.py  ids.py  models.py  store.py
src/opencode/core/modes/: base.py  registry.py
src/opencode/core/multiagent/: __init__.py  config.py  coordinator.py  messaging.py  models.py  worktree.py
src/opencode/core/orchestration/: agent.py  coordinator.py
src/opencode/core/plugins/: base.py  manager.py
src/opencode/core/providers/: __init__.py  anthropic_provider.py  github_provider.py  google_provider.py  groq_provider.py  huggingface_provider.py  ollama_provider.py  openai_provider.py  usage_tracker.py
src/opencode/core/rag/: __init__.py  config.py  embeddings.py  hybrid_search.py  local_embeddings.py  pipeline.py  query_rewriter.py  source_manager.py
src/opencode/core/research/: arxiv.py  huggingface.py  memory.py
src/opencode/core/skills/: debugging.py  planning.py  tdd.py
src/opencode/core/subagents/: errors.py  events.py  manager.py
src/opencode/core/tools/: __init__.py  base.py  command_tools.py  file_tools.py  search_tools.py
src/opencode/core/video/: audio.py
src/opencode/core/workflows/: __init__.py  base.py  executor.py  verifier.py
src/opencode/core/youtube/: __init__.py  chunking.py  transcript.py
src/opencode/i18n/: __init__.py  manager.py
src/opencode/i18n/locales/: en.json  ja.json  zh.json
src/opencode/llmchecker/: __init__.py
src/opencode/llmchecker/calibration/: __init__.py  models.py
src/opencode/llmchecker/hardware/: detector.py
src/opencode/llmchecker/ollama/: __init__.py  client.py
src/opencode/llmchecker/scoring/: engine.py  models.py
src/opencode/mcp/: __init__.py  oauth.py  types.py
src/opencode/provider/: __init__.py  anthropic.py  azure.py  bedrock.py  cerebras.py  cohere.py  groq.py  lmstudio.py  ollama.py  openai.py  openrouter.py  together.py
src/opencode/router/: profiler.py  vram_monitor.py
src/opencode/server/: __init__.py  app.py
src/opencode/server/routes/: global_routes.py  router.py  sessions.py  workflow.py
src/opencode/skills/: discovery.py  manager.py  models.py
src/opencode/src/opencode/: __init__.py
src/opencode/tests/: test_context.py  test_orchestration.py  test_rag.py  test_rag_methods.py  test_subagents.py
src/opencode/tests/integration/: test_workflow_execution.py
src/opencode/tests/providers/: test_anthropic_provider.py  test_ollama_provider.py  test_openai_provider.py  test_provider_base.py
src/opencode/tests/unit/: test_apply_patch.py  test_apply_patch_extended.py  test_approval_manager.py  test_approval_widget.py  test_attempt_completion_tool.py  test_azure_provider.py  test_bash_tool.py  test_batch_tool.py  test_bedrock_provider.py  test_cerebras_provider.py  test_chart_node.py  test_chart_node_extended.py  test_chart_node_rendering.py  test_checkpoints.py  test_citations.py  test_cli_commands.py  test_cli_main.py  test_codesearch_tool.py  test_config_commands.py  test_coordinator_extended.py  test_csv_array_tool.py  test_csv_array_tool_extended.py  test_custom_provider.py  test_data_validation_node.py  test_debug_cmd.py  test_deepinfra_provider.py  test_duckduckgo_search_tool.py  test_ensemble_aggregator_node.py  test_ensemble_aggregator_node_extended.py  test_file_tools.py  test_files_routes.py  test_git_tool.py  test_global_routes.py  test_google_provider.py  test_gpu_manager.py  test_graphql_schema.py  test_groq_provider.py  test_hardware_backends_cpu.py  test_http_node.py  test_i18n.py  (+74 more)
src/opencode/tests/utils/: accuracy_tracker.py
src/opencode/tool/: batch.py  codesearch.py  explore.py  file_tools.py  git.py  multiedit.py  plan.py  question.py  skill.py  task.py  todo.py  websearch.py  youtube.py
src/opencode/tui/: __init__.py  app.py
src/opencode/tui/widgets/: __init__.py  approval.py  chat.py  completion.py  sidebar.py
src/opencode/util/: __init__.py  index_generator.py
src/opencode/web/: __init__.py  app.py
src/opencode/workflow/: __init__.py  engine.py  models.py  node.py  registry.py
(+620 files in other folders)
